--- a/src/components/style.css
+++ b/src/components/style.css
@@ -3,10 +3,21 @@
     margin: 0;
 }
 
+.title {
+    text-align: center;
+    font-size: 64px;
+    font-weight: bold;
+    padding: 20px 0;
+    color: #02500b;
+    position: absolute;
+    top: 100px;
+  }
+
 .App {
     box-sizing: border-box;
     min-height: 100vh;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     font-family: 'Noto Sans Mono', monospace;
