--- a/src/components/style.css
+++ b/src/components/style.css
@@ -10,7 +10,7 @@
     padding: 20px 0;
     color: #02500b;
     position: absolute;
-    top: 100px;
+    top: 50px;
   }
 
 .App {
@@ -25,18 +25,22 @@
 }
 
 .container {
+    display: flex;
+    flex-direction: column;
     max-width: 50%;
     margin: 5px;
-    width: calc(100% - 10px);
     padding: 30px;
     border-radius: 10px;
     box-sizing: border-box;
     border: 1px solid #ced4da;
     background: #fff;
     box-shadow: 0 0 6px rgba(0, 0, 0, 0.25);
+    height: 550px;
+    overflow: auto;
 }
 
 .test {
+    flex: 1;
     user-select: none;
 }
 
@@ -64,6 +68,11 @@ span.wrong {
     color: darkred;
     background-color: pink;
 }
+
+.spacer {
+    flex: 100;
+}
+
 
 .result {
     display: flex;
